--- a/todo_frontent/package.json
+++ b/todo_frontent/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-bootstrap": "^2.8.0",
+    "react-confirm": "^0.3.0-2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
   },
