--- a/todo_frontent/package.json
+++ b/todo_frontent/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.7",
+    "@mui/material": "^5.14.7",
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
-    "react-confirm": "^0.3.0-2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
   },
